syntax = "proto3";

package storage_service;
option go_package = "/;storage_service";


service Storage {
  // Uploads a file in chunks
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  // Downloads a file in chunks
  rpc GetFile(GetFileRequest) returns (stream GetFileResponse);
  // Returns a list of all files
  rpc GetFiles(GetFilesRequest) returns (stream GetFilesResponse);
  // Deletes a file
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  // Deletes all files
  rpc DeleteFiles(DeleteFilesRequest) returns (DeleteFilesResponse);
}

// The file is divided into multiple chunks which are sent on by one to the server in each request message.
// oneof: specify that only one of a range of fields can be set in any message: the first request will only contain the metadata (file info)
message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  }
}

message FileInfo {
  string file_name = 1;
  uint32 size = 2;
}

message UploadFileResponse {
}

message GetFileRequest {
  string file_name = 1;
}
message GetFileResponse {
  bytes chunk_data = 2;
}

message GetFilesRequest {}
message GetFilesResponse {
  S3Object object = 1;
}
message S3Object {
  string key = 1;
  string last_modified = 2;
  uint64 size = 3;
  string storage_class = 4;
}

message DeleteFileRequest {
  string key = 1;
}
message DeleteFileResponse {
}

message DeleteFilesRequest {
}
message DeleteFilesResponse {
}
